--- a/takeretrofit/src/main/AndroidManifest.xml
+++ b/takeretrofit/src/main/AndroidManifest.xml
@@ -5,6 +5,11 @@
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
 
+        <meta-data android:name="DATABASE" android:value="take.db"/>
+        <meta-data android:name="VERSION" android:value="1"/>
+        <meta-data android:name="QUERY_LOG" android:value="true"/>
+        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.example.takeretrofit"/>
+
     </application>
 
 </manifest>
